# slaughter_vote

./: Readme.md  themes.txt
crates/client/: .env.example  Cargo.toml
crates/client/src/: main.rs  models.rs
crates/server/: .env.example  Cargo.toml  themes.txt
crates/server/migrations/: 20260127140507_create_tables.sql
crates/server/src/: load_themes.rs  main.rs  models.rs
