[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
webbrowser = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower = "0.4"
anyhow = "1"
colored = "2"
dotenv = "0.15"
