[package]
name = "slaughter_vote"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "load_themes"
path = "src/load_themes.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
supabase-jwt = "*"
